--- a/package.json
+++ b/package.json
@@ -19,7 +19,19 @@
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "@testing-library/cypress": "^5.3.1",
+    "axe-core": "^3.5.2",
+    "babel-jest": "^25.1.0",
+    "babel-plugin-emotion": "^10.0.29",
+    "babel-preset-gatsby": "^0.2.35",
+    "cypress": "^4.1.0",
+    "cypress-axe": "^0.5.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^25.1.0",
+    "jest-emotion": "^10.0.27",
+    "prettier": "^1.19.1",
+    "react-test-renderer": "^16.13.0",
+    "start-server-and-test": "^1.10.9"
   },
   "keywords": [
     "gatsby"
@@ -32,7 +44,11 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "jest",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "test:e2e": "start-server-and-test develop http://localhost:8000 cy:open",
+    "test:e2e:ci": "start-server-and-test develop http://localhost:8000 cy:run"
   },
   "repository": {
     "type": "git",
