--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "devDependencies": {
     "@testing-library/cypress": "^5.3.1",
+    "@testing-library/jest-dom": "^5.1.1",
+    "@testing-library/react": "^9.5.0",
     "axe-core": "^3.5.2",
     "babel-jest": "^25.1.0",
     "babel-plugin-emotion": "^10.0.29",
